all functionality done!. socket.io and passport auth remainning

--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,3 +1,41 @@
+<div style="padding-left:40px;overflow-x: hidden;">
+  <br>
+<h1 class="display-4">Welcome to FCC Voting App</h1>
+<hr class="my-4">
+<h2 >This is a full stack JavaScript app with below user stories : </h2>
+<ol>  
+  <li class="lead">As an authenticated user, I can keep my polls and come back later to access them.</li>
+  <li class="lead">As an authenticated user, I can share my polls with my friends.</li>
+  <li class="lead">As an authenticated user, I can see the aggregate results of my polls.</li>
+  <li class="lead">As an authenticated user, I can delete polls that I decide I don't want anymore.</li>
+  <li class="lead">As an unauthenticated or authenticated user, I can see and vote on everyone's polls.</li>
+</ol>
+  <p class="lead">To see it's full feature &nbsp;
+    <button class="btn btn-primary btn-md" data-toggle="modal" data-target="#myModal" role="button">Register</button>
+    <login-modal></login-modal>
+  </p>  
+  <br>
+<hr class="my-6">
+<h2 >Technologies, i have used : </h2>
+  <div class="row" style="padding-left:40px;">
+    <ul class="col-sm 4">      
+      <li class="lead">HTML5</li>
+      <li class="lead">CSS3</li>
+      <li class="lead">JavaScript</li>
+      <li class="lead">AngularJS</li>
+      <li class="lead">Bootstrap</li>
+    </ul>
+    <ul class="col-sm 4">  
+      <li class="lead">Node.js</li>
+      <li class="lead">Express.js</li>
+      <li class="lead">MongoDB</li>
+      <li class="lead"><del>Socket.io</del></li>
+      <li class="lead"><del>Passport OAuth</del></li>
+    </ul>
+  </div>
+</div>
+
+<!-- 
 <div class="container">
 	<div class="col-md-10 col-sm-12">
 		<div class="well">
@@ -8,9 +46,8 @@
 				</button> to see full feature							
 			</h3>			
 			<login-modal></login-modal>			  			  
-		</div>
-		<div class="list-group" ng-repeat="poll in allPolls"  style="margin-bottom:2px;">
-			<a ng-href="/polls/{{poll._id}}" class="list-group-item">{{poll.poll_name}}</a>
-		</div>		
+		</div>			
 	</div>
-</div>
+</div> -->
+
+
