--- a/public/templates/newpoll.html
+++ b/public/templates/newpoll.html
@@ -1,11 +1,11 @@
-<div class="container">
-	<div class="well">
-		<h2>Create new poll</h2>
-	</div>
-	<form class="col-md-5 col-sm-12">
+<div style="padding-top:40px;padding-left:40px;overflow-x: hidden;">  	
+	<h1 class="display-4">Create new poll</h1>
+	<hr class="my-4">
+	<form class="col-md-5">
 		<div class="form-group">
-			<label for='pollName' style="font-size:18px;">Poll Name</label>
-			<input type="text" class="form-control" ng-model="poll.pollName" placeholder="Enter poll name" id="pollName" required />
+			<label class="lead" for='pollName'>Poll Name</label>
+			<input type="text" class="form-control" ng-model="poll.pollName" ng-change="hideError()" placeholder="Enter poll name" id="pollName" required />
+			<span class="text-danger" ng-show="error">{{error}}</span>
 		</div>
 		<ul class="form-group" style="list-style: none;padding-left:0px;">
 			<li ng-repeat="option in poll.pollOptions" class="newPollList">
@@ -13,10 +13,10 @@
 				<span class="newPollListDeleteButton pull-right" ng-click="deleteOption($index)">
 					<i class="fa fa-trash-o" aria-hidden="true"></i>
 				</span>
-			</li>			
+			</li>
 		</ul>
 		<div class="form-group form-inline">
-			<input type="text" class="form-control" ng-model="tempPollOption" placeholder="Enter option" />			
+			<input type="text" class="form-control" ng-model="tempPollOption" placeholder="Enter option" style="margin-right: 2px;"/>			
 			<button class="btn btn-danger" ng-disabled="!tempPollOption" ng-click="addPollOption()">Add</button>
 		</div>
 		<div>			
