--- a/public/templates/login-modal.html
+++ b/public/templates/login-modal.html
@@ -1,46 +1,61 @@
- <div class="modal fade" id="myModal" role="dialog">
-			    <div class="modal-dialog">
-			    
-			      <!-- Modal content-->
-			      <div class="modal-content" style="max-width: 400px;margin-left: auto;margin-right: auto;">			        
-			        <div class="modal-body">
-			          <div class="row">
-					    <div class="main">
-					      <h3>Please Log In, or <a href="#">Sign Up</a></h3>
-					      <div class="row">
-					        <div class="col-xs-6 col-sm-6 col-md-6">
-					          <a href="#" class="btn btn-lg btn-primary btn-block">Facebook</a>
-					        </div>
-					        <div class="col-xs-6 col-sm-6 col-md-6">
-					          <a href="#" class="btn btn-lg btn-info btn-block">Google</a>
-					        </div>
-					      </div>
-					      <div class="login-or">
-					        <hr class="hr-or">
-					        <span class="span-or">or</span>
-					      </div>
-
-					      <form role="form">
-					        <div class="form-group">
-					          <label for="inputUsernameEmail">Username or email</label>
-					          <input type="text" class="form-control" id="inputUsernameEmail">
-					        </div>
-					        <div class="form-group">          
-					          <label for="inputPassword">Password</label>
-					          <input type="password" class="form-control" id="inputPassword">
-					        </div>
-					        <div class="checkbox pull-right">
-					        </div>
-					        <button type="submit" class="btn btn btn-primary">
-					          Log In
-					        </button>
-			          		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-					      </form>					    
-					    </div>
-					    <br>					      
-  					</div>
-			        </div>			       
-			      </div>
-			      
+<div class="modal" id="myModal" style="display:none;">
+    <div class="modal-dialog" role="document">
+      <!-- Modal content-->
+      <div class="modal-content" style="max-width: 400px;margin-left: auto;margin-right: auto;">			        
+        <div class="modal-body">
+        <div class="row">
+		    <div class="main">
+		    	<h3>Please Log In, or <a href="#">Sign Up</a></h3>
+		      	<div class="row">
+		        	<div class="col-xs-6 col-sm-6 col-md-6">
+		          		<a href="#" class="btn btn-lg btn-primary btn-block">Facebook</a>
+		        	</div>
+			        <div class="col-xs-6 col-sm-6 col-md-6">
+			        	<a href="#" class="btn btn-lg btn-info btn-block">Google</a>
+			    	</div>
 			    </div>
-			  </div>
+			    <div class="login-or">
+			        <hr class="hr-or">
+			    	<span class="span-or">or</span>
+			    </div>
+
+		      	<form role="form" name="myForm" ng-submit="registerUser()">
+		        	<div class="form-group">
+		          		<label for="inputUsernameEmail">Email</label>
+		          		<input type="email" class="form-control" ng-model="user.username" id="inputUsernameEmail" required>
+		        	</div>
+	        		<div class="form-group">          
+		          		<label for="inputPassword">Password</label>
+		          		<input type="password" class="form-control" ng-model="user.password" id="inputPassword" required>
+		        	</div>
+		        	<!-- <div class="checkbox pull-right"></div>		        	 -->
+		        	<button type="submit" ng-disabled="myForm.$invalid" class="btn btn btn-primary">Register</button>
+          			<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+		      	</form>					    
+		    </div>
+		    <br>					      
+		</div>
+        </div>			       
+    </div>      
+    </div>
+</div>
+
+<!--  <div class="modal" id="myModal">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Modal body text goes here.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div> -->
