--- a/public/templates/mypolls.html
+++ b/public/templates/mypolls.html
@@ -1,12 +1,8 @@
-<div class="container">
-	<div class="col-md-10 col-sm-12">
-		<div class="well">
-			<h2>My Polls</h2>
-		</div>	
-	<div class="list-group" ng-repeat="poll in myAllPolls"  style="margin-bottom:8px;">
-		<a ng-href="/polls/{{poll._id}}" class="list-group-item col-md-9" style="padding-top:5px;height:34px;">{{poll.poll_name}}</a>
-		<div class="col-md-2"></div>
-		<button class="btn btn-danger col-md-offset-1" ng-click="deletePoll(poll._id)">Delete poll</button>		
-	</div>	
-	</div>
+<div style="padding-top:40px;padding-left:40px;overflow-x: hidden;">  	
+	<h1 class="display-4">My Polls</h1>
+	<hr class="my-4">
+	<div class="row" ng-repeat="poll in myAllPolls"  style="margin-bottom:8px;min-height:34px;padding-left:40px;">
+		<a ng-href="/polls/{{poll._id}}" class="list-group-item col-sm-8" style="padding-top:5px;max-height:34px;margin-right:2px;">{{poll.poll_name}}</a>		
+		<button class="btn btn-danger col-sm-1" style="max-height:34px;" ng-click="deletePoll(poll._id)">Delete poll</button>		
+	</div>	 
 </div>
