--- a/public/templates/poll.html
+++ b/public/templates/poll.html
@@ -1,19 +1,22 @@
 
-<div class="container">
-	<div class="well">
-		<h2>Give your vote!!</h2>			
-	</div>
-	<div class="col-md-6">		
-		<h2>{{poll.pollName}}</h2>
-		<br>		
-		<select ng-model="selectedOption" class="form-control">
-			<option ng-repeat="option in poll.pollOptions" value="{{option._id}}">{{option.option}}</option>
-		</select>
-		<br>
-		
-		<button class="btn btn-primary" ng-disabled="!selectedOption" ng-click="submit()">Submit</button>
-	</div>
-	<div class="col-md-6">
-		<div google-chart chart="myChartObject" style="height:400px; width:100%;"></div>
+<div style="padding-top:40px;padding-left:40px;overflow-x: hidden;">  	
+	<h1 class="display-4">Cast your vote!!</h1>
+	<hr class="my-4">		
+	<div class="row">
+		<div class="col-md-6">		
+			<h2>{{poll.pollName}}</h2>
+			<span ng-if="error" class="text-danger">{{error}}</span>
+			<br>		
+			<select ng-model="selectedOption" ng-change="hideError()" class="form-control col-md-4">
+				<option  value="" selected>Select option</option>
+				<option ng-repeat="option in poll.pollOptions" value="{{option._id}}">{{option.option}}</option>
+			</select>
+			<br>
+			
+			<button class="btn btn-primary" ng-disabled="!selectedOption" ng-click="submit()">Submit</button>
+		</div>
+		<div class="col-md-5">
+			<div google-chart chart="myChartObject" style="height:400px; width:100%;"></div>
+		</div>
 	</div>
 </div>
